contrast issue

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -138,7 +138,7 @@ input:checked + .slider:before {
     z-index: 1; 
 	flex-direction: column;
 	list-style: none;
-	background-color: rgba(0, 0, 0, 0.5); 
+	background-color: rgba(0, 0, 0, 0.75); 
 	color: #fff;
     padding: 0px;
     margin-top: 0;
